--- a/nosotros.html
+++ b/nosotros.html
@@ -120,6 +120,7 @@
 		<script type="text/javascript" src="js/materialize.min.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function(){
+			$(".button-collapse").sideNav();
 		});
 		</script>
 	</body>
