--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 			      <a href="index.html" class="brand-logo">Grupo Rinsa</a>
 			      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			      <ul class="right hide-on-med-and-down">
-			        <li><a href="nosotros.html">NOSOTROS</a></li>
-			        <li><a href="#">SERVICIOS</a></li>
-			        <li><a href="#">MUNDO MEJOR</a></li>
-			        <li><a href="#">EQUIPO</a></li>
+							<li><a href="index2.html#nosotros">NOSOTROS</a></li>
+			        <li><a href="index2.html#servicios">SERVICIOS</a></li>
+			        <li><a href="index2.html#mundo">MUNDO MEJOR</a></li>
+			        <li><a href="index2.html#equipo">EQUIPO</a></li>
 							<li><a href="#">CONTACTO</a></li>
 			      </ul>
 			      <ul class="side-nav" id="mobile-demo">
-							<li><a href="nosotros.html">NOSOTROS</a></li>
-			        <li><a href="#">SERVICIOS</a></li>
-			        <li><a href="#">MUNDO MEJOR</a></li>
-			        <li><a href="#">EQUIPO</a></li>
+							<li><a href="index2.html#nosotros">NOSOTROS</a></li>
+			        <li><a href="index2.html#servicios">SERVICIOS</a></li>
+			        <li><a href="index2.html#mundo">MUNDO MEJOR</a></li>
+			        <li><a href="index2.html#equipo">EQUIPO</a></li>
 							<li><a href="#">CONTACTO</a></li>
 			      </ul>
 			    </div>
