Versión Final sin Js
Casi todas las imagenes subidas, falta agregar funcionalidades.

Saludos,

--- a/index2.html
+++ b/index2.html
@@ -35,46 +35,78 @@
 			  </nav>
 		</header>
 		<main>
+
+			<!-- <div id="nosotros">
+				<div class="row">
+					<span class="textoSubtitulos">Nuestro propósito</span>
+				</div>
+				<div class="row citasFounder">
+					<div class="col s12">
+						<p class="citas"><span class="comillas">"</span>Creemos que la mejor definición <br>de lo que somos es lo que hacemos, <br> por eso somos más porque hacemos más<span class="comillas">"</span></p>
+					</div>
+				</div>
+				<div class="row autores">
+					<div class="col s10 offset-s2 m6 offset-m6 l5 offset-l7 valign-wrapper">
+						<img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/22228327_10214359075875313_8997328943544160094_n.jpg?oh=d35a850052c4e6beba94f05bb1dfe537&oe=5A4278AA" alt="" class="founders">
+						<p>Arnold J. Reyes Cabrera<br><span>CEO & Founder de Rinsa</span></p>
+					</div>
+				</div>
+				<div class="row citasFounder">
+					<div class="col s12">
+						<p class="citas">"Creamos un espacio donde todos podemos soñar y crear un mundo mejor para todos."</p>
+					</div>
+				</div>
+				<div class="row autores">
+					<div class="col s10 offset-s2 m6 offset-m6 l5 offset-l7 valign-wrapper">
+						<img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/16427622_10206263139897426_4808952493104503828_n.jpg?oh=bf298226c9a573742b9805d8a7541d74&oe=5A8462EB" alt="" class="founders">
+						<p>Jose Navarrete Del Rosario<br><span>CBO & Founder de Rinsa</span></p>
+					</div>
+				</div>
+			</div> -->
+
 				<div id="nosotros">
+
           <div class="row">
             <span class="textoSubtitulos">Nuestro propósito</span>
+						<div class="divider"></div>
           </div>
-          <div class="row citasFounder">
-            <div class="col s12">
-              <p class="citas"><span class="comillas">"</span>Creemos que la mejor definición de lo que somos es lo que hacemos, por eso somos más porque hacemos más<span class="comillas">"</span></p>
-            </div>
-          </div>
-          <div class="row autores">
-            <div class="col s10 offset-s2 m6 offset-m6 l5 offset-l7 valign-wrapper">
-              <img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/22228327_10214359075875313_8997328943544160094_n.jpg?oh=d35a850052c4e6beba94f05bb1dfe537&oe=5A4278AA" alt="" class="founders">
-							<p>Arnold J. Reyes Cabrera<br><span>CEO & Founder de Rinsa</span></p>
-            </div>
-          </div>
+
 					<div class="row citasFounder">
-            <div class="col s12">
-              <p class="citas">"Creamos un espacio de todos donde podemos soñar y crear un mundo mejor para todos porque hacemos más"</p>
-            </div>
-          </div>
-          <div class="row autores">
-            <div class="col s10 offset-s2 m6 offset-m6 l5 offset-l7 valign-wrapper">
-              <img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/16427622_10206263139897426_4808952493104503828_n.jpg?oh=bf298226c9a573742b9805d8a7541d74&oe=5A8462EB" alt="" class="founders">
-							<p>Jose Navarrete Del Rosario<br><span>CBO & Founder de Rinsa</span></p>
-            </div>
-          </div>
+						<div class="col s12 m6">
+							<div class="col s12 valign-wrapper" style="margin: 40px 0px;">
+								<img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/22228327_10214359075875313_8997328943544160094_n.jpg?oh=d35a850052c4e6beba94f05bb1dfe537&oe=5A4278AA" alt="" class="founders">
+								<p class="center-align">Arnold J. Reyes Cabrera<br><span>CEO & Founder de Rinsa</span></p>
+							</div>
+		            <div class="col s12">
+		              <p class="citas">"Creemos que la mejor definición de lo que somos es lo que hacemos, por eso somos más porque hacemos más"</p>
+		            </div>
+	          </div>
+
+						<div class="col s12 m6">
+							<div class="col s12 right valign-wrapper" style="margin: 40px 0px;">
+								<img src="https://scontent.flim1-1.fna.fbcdn.net/v/t1.0-9/16427622_10206263139897426_4808952493104503828_n.jpg?oh=bf298226c9a573742b9805d8a7541d74&oe=5A8462EB" alt="" class="founders">
+								<p class="center-align">Jose Navarrete Del Rosario<br><span>CDO & Founder de Rinsa</span></p>
+							</div>
+								<div class="col s12">
+		              <p class="citas">"Creamos <br> un espacio donde todos podemos soñar y crear un mundo mejor para todos."</p>
+		            </div>
+							</div>
 			  </div>
+			</div>
 
 				<div id="VyM">
 					<div class="row">
 						<div class="col s12 m4 visionymision">
-							<p class="flow-text"><span class="textoSubtitulos">Visión 2021_</span><br><br>
-							Somos el grupo economico más diverso, rentable, sostenible y feliz de Ámerica.</p>
+							<p class="flow-text"><span class="textoSubtitulos">Visión 2021_</span><br>
+							Somos el grupo economico más diverso, rentable, sostenible y feliz de América Latina.</p>
 						</div>
 						<div class="col s12 m4 visionymision right">
-							<p class="flow-text"><span class="textoSubtitulos">Misión 2017_</span><br><br>Somos el mejor equipo del mundo haciendo un mundo mejor.</p>
+							<p class="flow-text"><span class="textoSubtitulos">Misión 2017_</span><br>
+								Somos el mejor equipo del mundo haciendo lo mejor para el mundo.</p>
 						</div>
 					</div>
-					<div class="row franja">
-					</div>
+					<!-- <div class="row franja">
+					</div> -->
 				</div>
 
 				<div id="principios">
@@ -139,7 +171,7 @@
 					</div>
 				</div>
 
-				<div id="servicios">
+				<!-- <div id="servicios">
 					<div class="row"><p><span class="textoSubtitulos">Nuestros Servicios_</span></p></div>
 					<div class="row servicios_Simple">
 						<p><span>Simple_</span><br><br>Por favor selecciona que tipo de cliente eres para poder ayudarte_</p>
@@ -261,7 +293,7 @@
 						<a href="#"><i class="material-icons">chevron_right</i></a>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 		</main>
 
